--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,6 +66,15 @@
                         <line x1="6" y1="6" x2="18" y2="18"></line>
                     </svg>
                 </button>
+                <!-- New Session Button -->
+                <button class="icon-btn new-chat-btn" onclick="resetSession()" title="新建会话">
+                    <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none">
+                        <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path>
+                        <line x1="9" y1="9" x2="9" y2="9"></line>
+                        <line x1="15" y1="5" x2="21" y2="5"></line>
+                        <line x1="18" y1="2" x2="18" y2="8"></line>
+                    </svg>
+                </button>
             </div>
 
             <div class="chat-container">
@@ -126,6 +135,7 @@
                     </button>
                 </div>
                 <div class="top-actions">
+
                     <button class="primary-btn calendar-action" onclick="showAddModal()">
                         <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2">
                             <line x1="12" y1="5" x2="12" y2="19"></line>
