--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <!-- Marked.js for Markdown -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=20260126_2">
 </head>
 
 <body>
@@ -59,13 +59,20 @@
                     </svg>
                     <span>智能助手</span>
                 </div>
-                <!-- Close Button for Mobile -->
-                <button class="icon-btn close-sidebar-btn" onclick="toggleSidebar()">
-                    <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none">
-                        <line x1="18" y1="6" x2="6" y2="18"></line>
-                        <line x1="6" y1="6" x2="18" y2="18"></line>
-                    </svg>
-                </button>
+                <div class="sidebar-actions">
+                    <button class="icon-btn new-chat-btn" onclick="startNewChat()" title="新对话">
+                        <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none">
+                            <path d="M12 5v14M5 12h14" />
+                        </svg>
+                    </button>
+                    <!-- Close Button for Mobile -->
+                    <button class="icon-btn close-sidebar-btn" onclick="toggleSidebar()">
+                        <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none">
+                            <line x1="18" y1="6" x2="6" y2="18"></line>
+                            <line x1="6" y1="6" x2="18" y2="18"></line>
+                        </svg>
+                    </button>
+                </div>
             </div>
 
             <div class="chat-container">
@@ -227,7 +234,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=20260126_2"></script>
 </body>
 
 </html>
