--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <!-- Marked.js for Markdown -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css?v=20260126_5">
+    <link rel="stylesheet" href="style.css?v=20260126_6">
 </head>
 
 <body>
@@ -251,7 +251,23 @@
         </div>
     </div>
 
-    <script src="script.js?v=20260126_5"></script>
+    <div id="confirmModal" class="modal confirm-modal" role="dialog" aria-modal="true" aria-labelledby="confirmTitle">
+        <div class="modal-content confirm-modal-content">
+            <div class="modal-header">
+                <h2 id="confirmTitle">请确认</h2>
+                <button class="icon-btn close-confirm-btn" type="button">
+                    <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
+                    </svg>
+                </button>
+            </div>
+            <div id="confirmBody" class="modal-body"></div>
+            <div class="modal-footer" id="confirmFooter"></div>
+        </div>
+    </div>
+
+    <script src="script.js?v=20260126_6"></script>
 </body>
 
 </html>
